--- a/package.json
+++ b/package.json
@@ -3,18 +3,27 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "build": "cross-env BASE=2 vue-cli-service build",
+    "lint": "vue-cli-service lint",
+    "build:test": "cross-env BASE=1 vue-cli-service build",
+    "build:local": "cross-env BASE=0 vue-cli-service build",
+    "dev": "cross-env BASE=1 vue-cli-service serve",
+    "dev:local": "cross-env BASE=0 vue-cli-service serve",
+    "dev:prod": "cross-env BASE=2 vue-cli-service serve"
   },
   "dependencies": {
     "@vue/composition-api": "^1.0.0-beta.11",
+    "axios": "^0.20.0",
     "core-js": "^3.6.5",
+    "js-cookie": "^2.2.1",
+    "lodash": "^4.17.20",
+    "vant": "^2.10.2",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
     "vuex": "^3.4.0"
   },
   "devDependencies": {
+    "@types/lodash": "^4.14.159",
     "@typescript-eslint/eslint-plugin": "^2.33.0",
     "@typescript-eslint/parser": "^2.33.0",
     "@vue/cli-plugin-babel": "~4.5.0",
@@ -25,12 +34,14 @@
     "@vue/cli-service": "~4.5.0",
     "@vue/eslint-config-prettier": "^6.0.0",
     "@vue/eslint-config-typescript": "^5.0.2",
+    "cross-env": "^7.0.2",
     "eslint": "^6.7.2",
     "eslint-plugin-prettier": "^3.1.3",
     "eslint-plugin-vue": "^6.2.2",
     "less": "^3.0.4",
     "less-loader": "^5.0.0",
     "prettier": "^1.19.1",
+    "ts-import-plugin": "^1.6.6",
     "typescript": "~3.9.3",
     "vue-template-compiler": "^2.6.11"
   }
