--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "vuex": "^3.4.0"
   },
   "devDependencies": {
+    "@types/js-cookie": "^2.2.6",
     "@types/lodash": "^4.14.159",
     "@typescript-eslint/eslint-plugin": "^2.33.0",
     "@typescript-eslint/parser": "^2.33.0",
@@ -39,7 +40,7 @@
     "eslint-plugin-prettier": "^3.1.3",
     "eslint-plugin-vue": "^6.2.2",
     "less": "^3.0.4",
-    "less-loader": "^5.0.0",
+    "less-loader": "^6.2.0",
     "prettier": "^1.19.1",
     "ts-import-plugin": "^1.6.6",
     "typescript": "~3.9.3",
