--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "core-js": "^3.6.5",
     "js-cookie": "^2.2.1",
     "lodash": "^4.17.20",
+    "moment": "^2.27.0",
     "vant": "^2.10.2",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
